--- a/contact.html
+++ b/contact.html
@@ -113,16 +113,16 @@
           <a href="about.html" class="nav-link text-white px-3">About</a>
         </li>
         <li class="nav-item">
-          <a href="#doctor" class="nav-link text-white px-3">Doctor</a>
+          <a href="./index.html#doctor" class="nav-link text-white px-3">Doctor</a>
         </li>
         <li class="nav-item">
-          <a href="#department" class="nav-link text-white px-3">Departments</a>
+          <a href="./index.html#department" class="nav-link text-white px-3">Departments</a>
         </li>
         <li class="nav-item">
-          <a href="./gallery.html" class="nav-link text-white px-3">Gallery</a>
+          <a href="#" class="nav-link text-white px-3">Gallery</a>
         </li>
         <li class="nav-item">
-          <a href="./events.html" class="nav-link text-white px-3">Events</a>
+          <a href="#" class="nav-link text-white px-3">Events</a>
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link text-white px-3">Contact</a>
