--- a/contact.html
+++ b/contact.html
@@ -430,9 +430,10 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This prototype is made by <a href="https://fexadigital.com" target="_blank">Fexa Digital Solutions</a></p>
-          </div>
+            <p>   
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> LUSENAC HOSPITAL v1. by 
+  <a href="https://fexadigital.com" target="_blank" style="color: #FF6B35;">
+    Fexa Digital Solutions</a>. All Rights Reserved.</p></div>
         </div>
       </div>
     </footer>    
