--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
             <form action="https://formsubmit.co/samuriel01@gmail.com" method="POST" class="needs-validation" novalidate>
               <!-- Hidden FormSubmit Fields -->
               <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_next" value="https://lusenac-hospital.com/contact-reached.html">
+              <input type="hidden" name="_next" value="https://lusenac-hospital.netlify.app/thank-you.html">
               
               <div class="row g-3">
                 <!-- Personal Information -->
@@ -1039,9 +1039,10 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This prototype is made by <a href="https://fexadigital.com" target="_blank">Fexa Digital Solutions</a></p>
-          </div>
+            <p>   
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> LUSENAC HOSPITAL v1. by 
+  <a href="https://fexadigital.com" target="_blank" style="color: #FF6B35;">
+    Fexa Digital Solutions</a>. All Rights Reserved.</p>          </div>
         </div>
       </div>
     </footer>
