--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Lusenac Hospital in Accra provides quality healthcare with expert staff and modern medical facilities.">
     <meta name="keywords" content="hospital, Accra, Ghana, healthcare, lusenac, doctors, emergency">
     <meta name="author" content="Lusenac Hospital">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -123,7 +123,7 @@
           <a href="./index.html#department" class="nav-link text-white px-3">Departments</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link text-white px-3">Gallery</a>
+          <a href="./gallery-view.html" class="nav-link text-white px-3">Gallery</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-white px-3">Events</a>
@@ -197,10 +197,10 @@
     <section class="py-5 bg-light">
   <div class="container">
     <!-- Main Contact Section with Form + Map -->
-    <div class="row g-0 shadow-lg overflow-hidden rounded-3">
+    <div class="row g-0 shadow-lg overflow-hidden rounded-3" style="font-family: Outfit;">
       <!-- Modern Contact Form (Left) -->
       <div class="col-lg-6 p-5 bg-white">
-        <h2 class="mb-4 text-primary">Send Us a Message</h2>
+        <h2 class="mb-4 text-primary" style="color: #1f347a !important;">Send Us a Message</h2>
         <form action="https://formsubmit.co/samuriel01@gmail.com" method="POST" class="needs-validation" novalidate>
           <!-- Hidden FormSubmit Fields -->
           <input type="hidden" name="_captcha" value="false">
@@ -363,11 +363,11 @@
             <div class="ftco-footer-widget mb-5 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+                <li><a href="./index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+                <li><a href="./about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
+                <li><a href="./gallery-view.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Gallery</a></li>
+                <li><a href="./index#Department"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
+                <li><a href="./contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
               </ul>
             </div>
             <div class="ftco-footer-widget mb-5 ml-md-4">
