--- a/contact.html
+++ b/contact.html
@@ -283,7 +283,7 @@
               <i class="bi bi-telephone-fill" style="color: #1a6f8b;"></i>
             </div>
             <div>
-              <a href="tel:+233302980000" class="text-decoration-none small fw-bold" style="color: #0d1b2a;">+233 30 298 0000</a>
+              <a href="tel:+233302980000" class="text-decoration-none small fw-bold" style="color: #0d1b2a;">+233 244 385 803</a>
             </div>
           </div>
           
@@ -293,7 +293,7 @@
               <i class="bi bi-envelope-fill" style="color: #1a6f8b;"></i>
             </div>
             <div>
-              <a href="mailto:info@lusenachospital.com" class="text-decoration-none small fw-bold" style="color: #0d1b2a;">info@lusenachospital.com</a>
+              <a href="mailto:lusenachospital@gmail.com" class="text-decoration-none small fw-bold" style="color: #0d1b2a;">lusenachospital@gmail.com</a>
             </div>
           </div>
           
