--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
 			<div class="container" style="font-family: Outfit">
 				<div class="row">
 					<div class="col-md-9">
-						<h2>You Can Book Your Appointment Today</h2>
+						<h2>You Can Reach Us Today</h2>
 						<p class="mb-0">Meet with our Physicians to discuss your health concern at your own convenience.</p>
 						<p></p>
 					</div>
 					<div class="col-md-3 d-flex align-items-center">
-						<p class="mb-0"><a href="#" class="btn btn-secondary px-4 py-3">Free Consutation</a></p>
+						<p class="mb-0"><a href="./contact.html" class="btn btn-secondary px-4 py-3">Contact Us</a></p>
 					</div>
 				</div>
 			</div>
