--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 					</div>
 					<div class="text pt-3 text-center">
 						<h3>Dr. Rachel Parker</h3>
-						<span class="position mb-2">Ophthalmologist</span>
+						<span class="position mb-2">Gynecologist</span>
 						<div class="faded">
 							<p>She provides expert care in women’s health, including reproductive wellness, pregnancy support, and preventive gynecological services.</p>
 							<ul class="ftco-social text-center">
@@ -740,10 +740,10 @@
                   <div class="form-floating">
                     <select class="form-select" id="department" name="department" required>
                       <option value="" selected disabled>Select Department</option>
-                      <option value="Cardiology">Cardiology</option>
-                      <option value="Neurology">Neurology</option>
+                      <option value="Dental">Dental Unit</option>
+                      <option value="Obs&Gyn">Obstetrics and Gynecology</option>
                       <option value="Pediatrics">Pediatrics</option>
-                      <option value="General">General Medicine</option>
+                      <option value="General">General Consultation</option>
                     </select>
                     <label for="department">Department</label>
                   </div>
@@ -802,7 +802,7 @@
             <div class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate">
                 <div class="block-18 p-5 w-100" style="background-color: rgba(245, 244, 248, 0.973);">
                     <div class="text-center">
-                        <strong class="number display-4 fw-bold" style="color: #2e59e6;" data-number="30">0</strong>
+                        <strong class="number display-4 fw-bold" style="color: #2e59e6;" data-number="14">0</strong>
                         <span class="d-block mt-2" style="color: #0d1b2a; font-weight: 500;">Years of Experience</span>
                     </div>
                 </div>
@@ -812,7 +812,7 @@
             <div class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate">
                 <div class="block-18 p-5 w-100" style="background-color: rgba(245, 244, 248, 0.973);">
                     <div class="text-center">
-                        <strong class="number display-4 fw-bold" style="color: #ee9b3c;" data-number="4500">0</strong>
+                        <strong class="number display-4 fw-bold" style="color: #ee9b3c;" data-number="6500">0</strong>
                         <span class="d-block mt-2" style="color: #0d1b2a; font-weight: 500;">Happy Patients</span>
                     </div>
                 </div>
@@ -822,7 +822,7 @@
             <div class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate">
                 <div class="block-18 p-5 w-100" style="background-color: rgba(245, 244, 248, 0.973);">
                     <div class="text-center">
-                        <strong class="number display-4 fw-bold" style="color: #9552e2;" data-number="84">0</strong>
+                        <strong class="number display-4 fw-bold" style="color: #9552e2;" data-number="15">0</strong>
                         <span class="d-block mt-2" style="color: #0d1b2a; font-weight: 500;">Qualified Doctors</span>
                     </div>
                 </div>
