--- a/gallery-view.html
+++ b/gallery-view.html
@@ -143,7 +143,7 @@
     <div class="contact">
       Need help? Call <strong>+233 244 385 803</strong> or email us.
       <br />
-      <a href="mailto:lusenachospital@gmail.com" class="button">Contact Us</a>
+      <a href="./contact.html" class="button">Contact Us</a>
     </div>
   </div>
 </body>
