--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
       </div>
     </section>
-
+<style>
 	  /* Fix touch scroll blocked by carousel */
 .home-slider.owl-carousel,
 .home-slider .owl-stage-outer,
@@ -212,7 +212,7 @@ html,
 body {
   overflow-x: hidden;
 }
-
+</style>
 
     <section>
     <div class="container">
