--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ body {
                 <option value="Pediatrics">Pediatrics</option>
                 <option value="General">General Consultation</option>
               </select>
-              <label for="department">Department</label>
+              <label for="department"></label>
             </div>
           </div>
           
@@ -805,12 +805,12 @@ body {
           <div class="col-md-6">
             <div class="form-floating">
               <select class="form-select" id="time" name="time" required>
-                <option value="" selected disabled>Select Time</option>
+                <option value="" selected disabled>Preferred Time</option>
                 <option value="Morning (9am-12pm)">Morning (9am-12pm)</option>
                 <option value="Afternoon (1pm-4pm)">Afternoon (1pm-4pm)</option>
                 <option value="Evening (5pm-8pm)">Evening (5pm-8pm)</option>
               </select>
-              <label for="time">Preferred Time</label>
+              <label for="time"></label>
             </div>
           </div>
           
