--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@ body {
 				</p>
             </div>
             <div class="ftco-footer-widget mb-5">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have any Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Obodai Adidon Street, Ayawaso North, Accra, Ghana</span></li>
