--- a/index.html
+++ b/index.html
@@ -141,78 +141,59 @@
 
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image:url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row no-gutters slider-text align-items-center justify-content-start" data-scrollax-parent="true">
-          <div class="col-md-6 text ftco-animate">
-            <h1 class="mb-4">WE CARE ABOUT <span>YOUR HEALTH</span></h1>
-            <h3 class="subheading">Everyday We Bring Hope and Smile to the Patient We Serve</h3>
-            <p><a href="#testmon" class="btn btn-secondary px-4 py-3 mt-3">Clients Testimonials</a></p>
-          </div>
-        </div>
-        </div>
-      </div>
-
-      <div class="slider-item" style="background-image:url(images/bg_2.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row no-gutters slider-text align-items-center justify-content-start" data-scrollax-parent="true">
-          <div class="col-md-6 text ftco-animate">
-            <h1 class="mb-4">PROVIDING<span>EXPERT AND QUALITY MEDICAL CARE</span></h1>
-            <h3 class="subheading">Your Health is Our Top Priority with Comprehensive and Affordable Medical Services.</h3>
-            <p><a href="./gallery-view.html" class="btn btn-secondary px-4 py-3 mt-3">View Our Gallery</a></p>
-          </div>
-        </div>
+    <div id="healthSlider" class="carousel slide" data-bs-ride="carousel" style="height: 80vh; max-height: 600px; overflow: hidden;">
+  <!-- Indicators -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#healthSlider" data-bs-slide-to="0" class="active" style="width: 12px; height: 12px; border-radius: 50%;"></button>
+    <button type="button" data-bs-target="#healthSlider" data-bs-slide-to="1" style="width: 12px; height: 12px; border-radius: 50%;"></button>
+  </div>
+  
+  <!-- Slides -->
+  <div class="carousel-inner h-100">
+    <!-- Slide 1 -->
+    <div class="carousel-item active h-100" style="background: linear-gradient(rgba(0, 0, 0,0), rgba(0, 0, 0, 0)), url('images/bg_1.jpg') center/cover no-repeat; transition: transform 0.6s ease-in-out;">
+      <div class="container h-100 d-flex align-items-center">
+        <div class="text-white animate__animated animate__fadeInLeft" style="max-width: 600px; padding: 20px; animation-delay: 0.3s;">
+          <h1 class="mb-3" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.5); font-size: clamp(1.5rem, 4vw, 3rem); font-weight: 700;">WE CARE ABOUT <span class="text-primary">YOUR HEALTH</span></h1>
+          <h3 class="mb-4" style="text-shadow: 1px 1px 2px rgba(0,0,0,0.5); font-size: clamp(1rem, 2vw, 1.5rem);">Everyday We Bring Hope and Smile to the Patient We Serve</h3>
+          <a href="#testmon" class="btn btn-primary px-4 py-2 mt-2" style="border-radius: 30px; transition: all 0.3s; font-size: clamp(0.9rem, 2vw, 1.1rem);">Clients Testimonials</a>
         </div>
       </div>
-    </section>
-<style>
-	  /* Fix touch scroll blocked by carousel */
-.home-slider.owl-carousel,
-.home-slider .owl-stage-outer,
-.home-slider .owl-stage {
-  touch-action: pan-y !important;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: auto !important;
-  overflow-x: hidden;
-}
+    </div>
+    
+    <!-- Slide 2 -->
+    <div class="carousel-item h-100" style="background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/bg_2.jpg') center/cover no-repeat; transition: transform 0.6s ease-in-out;">
+      <div class="container h-100 d-flex align-items-center">
+        <div class="text-white animate__animated animate__fadeInRight" style="max-width: 600px; padding: 20px; animation-delay: 0.3s;">
+          <h1 class="mb-3" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.5); font-size: clamp(1.5rem, 4vw, 3rem); font-weight: 700;">PROVIDING <span class="text-primary">EXPERT AND QUALITY MEDICAL CARE</span></h1>
+          <h3 class="mb-4" style="text-shadow: 1px 1px 2px rgba(0,0,0,0.5); font-size: clamp(1rem, 2vw, 1.5rem);">Your Health is Our Top Priority with Comprehensive and Affordable Medical Services.</h3>
+          <a href="./gallery-view.html" class="btn btn-primary px-4 py-2 mt-2" style="border-radius: 30px; transition: all 0.3s; font-size: clamp(0.9rem, 2vw, 1.1rem);">View Our Gallery</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Controls -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#healthSlider" data-bs-slide="prev" style="width: 5%;">
+    <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.5));"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#healthSlider" data-bs-slide="next" style="width: 5%;">
+    <span class="carousel-control-next-icon" aria-hidden="true" style="filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.5));"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-/* Prevent full-screen block on mobile */
-.slider-item {
-  min-height: auto !important;
-  height: auto !important;
-  padding: 4rem 0; /* Adds spacing without full height */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Ensure section doesn’t overflow screen height */
-@media (max-width: 768px) {
-  .home-slider {
-    min-height: auto !important;
-    height: auto !important;
-  }
-
-  .slider-item {
-    padding: 3rem 1rem !important;
-    height: auto !important;
-  }
-
-  .slider-text {
-    padding-top: 2rem !important;
-    padding-bottom: 2rem !important;
-  }
-}
-
-/* Optional: prevent global overflow hidden */
-html,
-body {
-  overflow-x: hidden;
-}
-</style>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var myCarousel = document.getElementById('healthSlider');
+    var carousel = new bootstrap.Carousel(myCarousel, {
+      interval: 5000,
+      wrap: true,
+      pause: 'hover'
+    });
+  });
+</script>
 
     <section>
     <div class="container">
