--- a/index.html
+++ b/index.html
@@ -102,12 +102,21 @@
     </button>
 
     <!-- CTA Button -->
-    <p class="button-custom order-lg-last mb-0 ms-auto">
-      <a href="#appointment" class="btn btn-outline-warning py-2 px-3 fw-semibold rounded-pill shadow-sm">
-        Make An Appointment
-      </a>
-    </p>
-    
+<p class="button-custom order-lg-last mb-0 ms-auto">
+  <a href="#appointment" 
+     class="btn py-2 px-3 fw-semibold rounded-pill shadow-sm"
+     style="
+       color: #fd7e14;
+       background-color: transparent;
+       border: 2px solid #fd7e14;
+       transition: all 0.3s ease;
+     "
+     onmouseover="this.style.backgroundColor='rgba(253, 126, 20, 0.1)'; this.style.transform='translateY(-2px)'"
+     onmouseout="this.style.backgroundColor='transparent'; this.style.transform='translateY(0)'">
+    Book Appointment
+  </a>
+</p>
+	 
 
     <!-- Navigation Links -->
     <div class="collapse navbar-collapse" id="ftco-nav">
